k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-service
  namespace: app-namespace
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
